# noaftodo

./: .SRCINFO  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  docgen.sh  noaftodo.conf.template  temp  temp1  test
doc/: troubleshooting.doc
libnoaf/: CMakeLists.txt
libnoaf/demos/: cmd_demo.cpp  noafui.cpp  noafuidl.cpp  ui_demo.cpp
libnoaf/src/: cmd.cpp  cmd.hpp  conarg.cpp  conarg.hpp  cvar.cpp  cvar.hpp  hooks.cpp  hooks.hpp  log.cpp  log.hpp  time_s.hpp  ui.cpp  ui.hpp
libnoaf/src/cmd/: token.cpp  token.hpp
libnoaf/src/core/: log.hpp  time_s.cpp  time_s.hpp  ui.cpp  ui.hpp
libnoaf/src/core/cmd/: token.cpp
libnoaf/src/cui/ui/: nc.cpp  nc.hpp
libnoaf/src/gui/ui/: qt.cpp  qt.hpp  qt_window.cpp  qt_window.hpp
libnoaf/src/ui/: fb.cpp  fb.hpp  nc.cpp  nc.hpp
old-src/: cmd.cpp  cmd.h  config.cpp  cui.cpp  daemon.cpp  daemon.h  def.cpp  macro.h  noaftodo.cpp  noaftodo.h
old-src/core/: time.h
old-src/cui_modes/: listview.cpp  normal.cpp  timeline.cpp
pkg/: .SRCINFO  PKGBUILD
scripts/: ext.conf  haiku_notify.conf  helloworld.conf  legacy_aliases.conf  prettier_status.conf  vim.conf
src/: cmd.cpp  cmd.h  config.cpp  cui.cpp  cui.h  cvar.cpp  daemon.cpp  daemon.h  def.cpp  entry_flags.cpp  entry_flags.h  list.cpp  list.h  noaftodo.cpp  noaftodo.h  noaftodo_cmd.cpp  noaftodo_cmd.h  noaftodo_config.cpp  noaftodo_config.h  noaftodo_cui.cpp  noaftodo_cui.h  noaftodo_cvar.cpp  noaftodo_cvar.h  noaftodo_daemon.cpp  noaftodo_daemon.h  noaftodo_def.cpp  noaftodo_entry_flags.cpp  noaftodo_entry_flags.h  noaftodo_io.cpp  noaftodo_io.h  noaftodo_list.cpp  noaftodo_list.h  noaftodo_output.cpp  noaftodo_output.h  noaftodo_time.cpp  noaftodo_time.h  time.h
src/cui_modes/: command.cpp  details.cpp  help.cpp  listview.cpp  noaftodo_mode_command.cpp  noaftodo_mode_details.cpp  noaftodo_mode_help.cpp  noaftodo_mode_listview.cpp  noaftodo_mode_normal.cpp  noaftodo_mode_timeline.cpp  normal.cpp  timeline.cpp
tools/: docgen.sh  wiki-manpage.sh
